# OverStrings

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
crates/overstrings-cli/: Cargo.toml
crates/overstrings-cli/src/: main.rs
crates/overstrings-cli/tests/: cli_tests.rs
crates/overstrings-core/: Cargo.toml
crates/overstrings-core/src/: bridge.rs  lib.rs  payloads.rs  presets.rs
crates/overstrings-core/src/core/: continuity.rs  engine.rs  mod.rs  tuning.rs
crates/overstrings-core/src/integration/: mod.rs  siglstudio.rs  trellis.rs
crates/overstrings-core/src/mandala/: mod.rs  render.rs  sigl_bridge.rs
crates/overstrings-core/src/resonance/: cymatic.rs  mod.rs  primebeat.rs  tre.rs
crates/overstrings-core/src/shield/: mod.rs  orthogonal.rs
crates/overstrings-core/src/state/: runtime.rs  session.rs
crates/overstrings-core/src/transports/: midi.rs  mock.rs  mod.rs  osc.rs  serial.rs
docs/: ARCHITECTURE.md  CLI.md  CONTINUITY_METRICS.md  INTEGRATION.md  PAYLOAD_CONTRACT.md  PRESET_REGISTRY.md  SOFTWARE_BRIDGE_V1.md  TUNING_CHART.md
examples/echo-weaving/: README.md
examples/vineyard-duet/: README.md
