[package]
name = "overstrings-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "overstrings"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
overstrings-core = { path = "../overstrings-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
